# rust-gameboy-emulator

./: Cargo.toml  README.md
.github/workflows/: test.yaml
config/: config.yml
src/: main.rs
src/app/: config.rs  core.rs  gameboy.rs  mod.rs  utils.rs
src/cpu/: mod.rs  op.rs  opcodes.rs  registers.rs
src/cpu/ops/: dec.rs  inc.rs  ld.rs  math.rs  mod.rs  nop.rs
src/devices/: divider.rs  interrupt_flag.rs  io.rs  joypad.rs  mod.rs  serial_transfer.rs  sound_channel.rs  sound_control.rs  timer.rs  wave_ram.rs
src/graphics/: mod.rs  tile.rs  tile_data.rs
src/memory/: access.rs  init.rs  mod.rs  router.rs  switcher.rs
src/memory/switchable/: cartridge_switchable.rs  mod.rs
src/screen/: display.rs  display_info.rs  mod.rs  renderer.rs
