[package]
name = "rust-gameboy-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sdl2 = "0.36.0"
